// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extracts docs 1`] = `
Object {
  "hybrids": Array [],
  "length": 1,
  "terms": Array [
    Object {
      "jsDoc": null,
      "kind": "variable",
      "languageLevel": "term",
      "name": "a",
      "sourceLocation": Object {
        "fileLine": 1,
        "filePath": "/test.ts",
      },
      "text": "a = 1",
      "textWithJSDoc": "a = 1",
      "type": Object {
        "name": "1",
      },
    },
  ],
  "types": Array [],
}
`;

exports[`jsdoc extracts doc from a variable statement 1`] = `
Object {
  "source": "primary",
}
`;

exports[`jsdoc splits multiple jsDoc blocks by primary and additional (closest to code is primary) 1`] = `
Object {
  "additional": Array [
    Object {
      "source": "additional 2",
    },
    Object {
      "source": "additional 1",
    },
  ],
  "primary": Object {
    "source": "primary",
  },
}
`;

exports[`jsdoc whitespace and comments between multiple jsDoc blocks are ignored 1`] = `
Object {
  "additional": Array [
    Object {
      "source": "additional 2",
    },
    Object {
      "source": "additional 1",
    },
  ],
  "primary": Object {
    "source": "primary",
  },
}
`;
